--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "animate.css": "^4.1.1",
     "daisyui": "^5.3.7",
     "firebase": "^12.4.0",
     "lucide-react": "^0.546.0",
